# VVM_GPU_CPP

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  mkdocs.yml  run.sh  submit.py
.githooks/: pre-push
.github/workflows/: docs.yml
cmake/: nvhpc.cmake
data/initial_conditions/: profile.txt
data/input_configs/: default_config.json
docs/: index.md  quick-start.md
docs/developer-guides/: architecture.md  index.md  p3-modifications.md  physics.md
docs/examples/: gallery.md  idealized.md  index.md  taiwan-vvm.md
docs/user-guides/: configuration.md  environment.md  index.md  io-management.md  job-submission.md
rundata/: TOPO.nc  init.nc
rundata/initial_conditions/: profile.txt  profile_karmen.txt  profile_p3.txt
rundata/initial_conditions/profiles/: profile_rcemip.txt
rundata/initial_conditions/spatial/: init.nc  init_regression_test.nc
rundata/input_configs/: default_config.json
rundata/land/: topolsm_TW.nc
rundata/p3/: mu_r_table_vals.dat8  revap_table_vals.dat8  revap_table_vals_v2.dat8  vm_table_vals.dat8  vm_table_vals_v2.dat8  vn_table_vals.dat8  vn_table_vals_v2.dat8
rundata/rrtmgp/: rrtmgp-allsky.nc
scripts/: convert_multiprocess.py  env_twnia2_nano5.sh  generate_init_nc.py  generate_topo_nc.py
src/: CMakeLists.txt  main.cpp
src/core/: BoundaryConditionManager.cpp  BoundaryConditionManager.hpp  CMakeLists.txt  Field.cpp  Field.hpp  Grid.cpp  Grid.hpp  HaloExchanger.cpp  HaloExchanger.hpp  Initializer.cpp  Initializer.hpp  OutputManager.cpp  OutputManager.hpp  Parameters.cpp  Parameters.hpp  State.cpp  State.hpp  vvm_types.hpp
src/driver/: CMakeLists.txt  Model.cpp  Model.hpp
src/dynamics/: CMakeLists.txt  DynamicalCore.cpp  DynamicalCore.hpp
src/dynamics/filters/: SpongeLayer.cpp  SpongeLayer.hpp
src/dynamics/forcings/: AreaMeanNudging.cpp  AreaMeanNudging.hpp  LateralBoundaryNudging.cpp  LateralBoundaryNudging.hpp  RandomForcing.cpp  RandomForcing.hpp  SpongeLayer.cpp  SpongeLayer.hpp
src/dynamics/solvers/: WindSolver.cpp  WindSolver.hpp
src/dynamics/spatial_schemes/: SpatialScheme.hpp  Takacs.cpp  Takacs.hpp
src/dynamics/temporal_schemes/: AdamsBashforth2.cpp  AdamsBashforth2.hpp  TemporalScheme.hpp  TimeIntegrator.cpp  TimeIntegrator.hpp
src/dynamics/tendency_processes/: AdvectionTerm.cpp  AdvectionTerm.hpp  BuoyancyTerm.cpp  BuoyancyTerm.hpp  CoriolisTerm.cpp  CoriolisTerm.hpp  StretchingTerm.cpp  StretchingTerm.hpp  TendencyCalculator.cpp  TendencyCalculator.hpp  TendencyTerm.hpp  TwistingTerm.cpp  TwistingTerm.hpp
src/io/: CMakeLists.txt  Hdf5RestartReader.cpp  Hdf5RestartReader.hpp  IOServer.cpp  IOServer.hpp  OutputManager.cpp  OutputManager.hpp  PnetcdfReader.cpp  PnetcdfReader.hpp  Reader.hpp  TxtReader.cpp  TxtReader.hpp
src/physics/: CMakeLists.txt
src/physics/land/: CMakeLists.txt  LandProcess.cpp  LandProcess.hpp  fpvs_gpu.f90  machine.f90  mod_const.f90  mod_index.f90  mod_param.f90  mod_rank.f90  namelist_soilveg.f90  physcons.f90  set_soilveg.f90  sfc_diag_gpu.f90  sfc_diff_gpu.f90  sfc_drv_gpu.f90  sfc_ocean_gpu.f90  sfc_sice_gpu.f90  sflx_gpu.f90  vvm_land_interface.f90
src/physics/p3/: CMakeLists.txt  VVM_p3_process_interface.cpp  VVM_p3_process_interface.hpp  p3_f90.cpp  p3_functions.hpp  p3_iso_c.f90
src/physics/p3/disp/: p3_main_impl_disp.cpp  p3_main_impl_part1_disp.cpp  p3_main_impl_part2_disp.cpp
src/physics/p3/eti/: p3_calc_cond_evap_dep_sub.cpp  p3_droplet_activation.cpp  p3_limit_cond_evap_dep_sub.cpp
src/physics/p3/impl/: p3_calc_cond_evap_dep_sub_impl.hpp  p3_check_values_impl.hpp  p3_conservation_impl.hpp  p3_droplet_activation_impl.hpp  p3_evaporate_rain_impl.hpp  p3_ice_cldliq_wet_growth_impl.hpp  p3_ice_melting_impl.hpp  p3_ice_nucleation_impl.hpp  p3_ice_sed_impl.hpp  p3_incloud_mixingratios_impl.hpp  p3_init_impl.hpp  p3_limit_cond_evap_dep_sub_impl.hpp  p3_main_impl.hpp  p3_main_impl_part1.hpp  p3_main_impl_part2.hpp  p3_main_impl_part3.hpp  p3_nc_conservation_impl.hpp  p3_rain_sed_impl.hpp  p3_rain_self_collection_impl.hpp  p3_update_prognostics_impl.hpp
src/physics/rrtmgp/: CMakeLists.txt  VVM_rrtmgp_process_interface.cpp  VVM_rrtmgp_process_interface.hpp  eamxx_rrtmgp_interface.cpp  eamxx_rrtmgp_interface.hpp  eamxx_rrtmgp_process_interface.cpp  rrtmgp_utils.hpp  scream_rrtmgp_interface.hpp  shr_infnan_mod.F90
src/physics/share/: physics_share_f2c.F90
src/physics/surface/: CMakeLists.txt  SurfaceProcess.cpp  SurfaceProcess.hpp
src/physics/turbulence/: CMakeLists.txt  TurbulenceProcess.cpp  TurbulenceProcess.hpp
src/share/: CMakeLists.txt
src/share/core/: CMakeLists.txt  eamxx_config.h.in  eamxx_config.hpp
src/share/physics/: CMakeLists.txt  physics_constants.hpp  physics_saturation_impl.hpp
src/share/property_checks/: CMakeLists.txt
src/share/util/: CMakeLists.txt
src/utils/: CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.hpp  Timer.cpp  Timer.hpp  TimingManager.cpp  TimingManager.hpp
tests/: CMakeLists.txt  field_state_test.cpp  halo_exchanger_test.cpp
tests/baselines/: 2dbubble.h5  2dbubble_turbulence_nudge.h5  advection_u.h5  advection_v.h5  advection_w.h5  stretching.h5  twisting.h5
tests/configs/: 2dbubble.json  2dbubble_turbulence_nudge.json  advection_u.json  advection_v.json  advection_w.json  stretching.json  twisting.json
tests/scripts/: verify_output.py
tools/: core_run.sh  generate_init_nc.py  generate_ls_forcing.py  vvm_wrapper.sh
